# AugustDAO

./: .gitignore  LICENSE  README.md
dao-contracts/: Anchor.toml  Cargo.toml  test-key.json
dao-contracts/august-token/program/: Cargo.toml
dao-contracts/august-token/program/src/: lib.rs
dao-contracts/execution-oracle/program/: Cargo.toml
dao-contracts/execution-oracle/program/src/: lib.rs
dao-contracts/governance/program/: Cargo.toml
dao-contracts/governance/program/src/: lib.rs
dao-contracts/treasury/program/: Cargo.toml
dao-contracts/treasury/program/src/: lib.rs
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: DelegationManager.tsx  ProposalList.tsx  WalletBalance.tsx  WalletDisplay.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/lib/: governance.ts  solana.ts
frontend/src/types/: august_token.ts
